# IC2023

./: CMakeLists.txt  README.md  main.cpp
Atividades Felipe/Geograde/: Geograde.msh
IC2023/: holedplate.geo  holedplate.msh  main.cpp
